syntax = "proto3";
import "common/transaction.proto";
import "common/balance.proto";
import "common/account.proto";

option csharp_namespace = "AccountsReadMicroservice";

package AccountsMicroservice;

service AccountsRead {
  rpc Get (GetAccountsRequest) returns (GetAccountsResponse);
  rpc GetUserAccounts (GetUserAccountsRequest) returns (GetAccountsResponse);
  rpc GetBalances (GetBalancesRequest) returns (GetBalancesResponse);
  rpc GetTransactions (GetTransactionsRequest) returns (GetTransactionsResponse);
}

message GetAccountsRequest {
  int64 flowId = 1;
  repeated string ids = 2;
}

message GetUserAccountsRequest {
  int64 flowId = 1;
  string userId = 2;
}

message GetAccountsResponse {
  repeated Account accounts = 1;
}

message GetBalancesRequest {
  int64 flowId = 1;
  repeated string ids = 2;
}

message GetBalancesResponse {
  repeated AccountBalance balances = 1;
}

message GetTransactionsRequest {
  int64 flowId = 1;
  repeated string ids = 2;
}

message GetTransactionsResponse {
  repeated Transaction transactions = 1;
}